data gen overhaul